# NLA

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
configs/: ar_baseline.yaml  ar_diagnostics.yaml  av_baseline.yaml  default.yaml  qwen_ar_lora.yaml  qwen_av_lora.yaml  qwen_av_reward_rl_final.yaml  qwen_joint_nla_final.yaml  qwen_nla_reconstruction.yaml
data/: README.md
data/processed/: dataset_manifest.json  pilot_100.jsonl  test_indomain.jsonl  test_language_shift.jsonl  test_surface_shift.jsonl  validation.jsonl
docs/: experiment_plan.md  manual_installation.md  project_plan.md  reference_mapping.md  research_log.md  setup_and_model_download.md  source_usage.md  task_definition.md
docs/phase_results/: phase_01_feasibility_probe.md  phase_02_dataset_preparation.md  (+19 more)
experiments/: experiment_log.csv  phase_10d_experiment_log.csv  phase_11_experiment_log.csv
prompts/: README.md
scripts/: extract_activations.py  feasibility_probe.py  generate_av_explanations.py  generate_qwen_av_explanations.py  prepare_dataset.py  run_evaluation.py  run_nla_loop.py  run_qwen_nla_loop.py  summarize_ar_runs.py  train_ar.py  train_av.py  train_qwen_ar.py  train_qwen_av.py  train_qwen_av_reward_rl.py  train_qwen_joint_nla.py  train_qwen_nla_reconstruction.py
tests/: test_activation_io.py  test_activations.py  test_ar_data.py  test_ar_model.py  test_av_model.py  test_data.py  test_evaluation_io.py  test_metrics.py  test_nla_loop.py  test_qwen_av_reward_rl.py  test_qwen_joint_nla.py  test_qwen_model_shapes.py  test_qwen_nla_loop.py
(+217 files in other folders)
